[package]
name = "demeter-1"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
ed25519-dalek = { version = "2.0", features = ["rand_core", "serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
hex = "0.4"
rand_chacha = "0.3"